# blong

./: SETUP.md  ideas.md  log.md  raspberry_pi_pico-DapperMime.uf2
blong/: Cargo.toml  flash.sh
blong/.cargo/: config.toml
blong/ada_gps/: Cargo.toml
blong/ada_gps/src/: integer_percent.rs  lib.rs  log_macros.rs  utc_date_time.rs
blong/ada_gps/src/cmd/: mod.rs  parse.rs  serialize.rs
blong/ada_gps/src/locus/: logged_point.rs  mod.rs  status.rs
blong/ada_gps/src/logger/: mod.rs  packet.rs  parser.rs  status.rs
blong/ada_gps/src/logger/snapshots/: ada_gps__logger__parser__tests__parses_large_sample_dump-2.snap  ada_gps__logger__parser__tests__parses_large_sample_dump.snap
blong/ada_gps/test_assets/: read_3819_log_records_inputs.txt  reboot_and_read_3819_log_records_traffic.txt
blong/cross/: Cargo.toml  build.rs
blong/cross/.cargo/: config.toml
blong/cross/app/: Cargo.toml  Embed.toml
blong/cross/app/src/: main.rs
blong/cross/board/: Cargo.toml
blong/cross/board/src/: lib.rs
blong/cross/self-tests/: Cargo.toml
blong/cross/self-tests/tests/: ada_gps.rs
blong/src/: attrs.rs  gps.rs  lib.rs  log_to_defmt.rs  main.rs  prelude.rs  timer.rs
blong/tests/: integration.rs
blong/xtask/: Cargo.toml
blong/xtask/src/: main.rs
resources/gps/: locus.py
resources/gps/Locus_Sample_Code/: LocusParser.cpp  LocusParser.h  Locus_Dump_Sample_Code.cpp  Locus_Dump_Sample_Code.h
