[package]
name = "blinky"
version = "0.1.0"
authors = ["nebelgrau77"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
nrf52840-hal = { version = "0.14.1", features = ["rt"] }
panic-halt = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[dependencies.embedded-hal]
version = "0.2.6"
features = ["unproven"]
