[package]
name = "blong"
version = "0.0.1"
authors = ["daniel@danielzfranklin.org"]
edition = "2021"

[[bin]]
name = "blong"
test = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# but do optimize all the other dependencies
[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# but do optimize all the other dependencies
[profile.test.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
# see comment in the profile.release section
lto = 'false'
opt-level = 3 # <-
overflow-checks = false # <-

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
nrf52840-hal = { version = "0.14.1", features = ["rt"] }
panic-halt = "0.2.0"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
defmt-test = "0.3.0"
cortex-m-rtic = "1.0.0"
systick-monotonic = "1.0.0"
fugit = "0.3.3"
rubble = { git = "https://github.com/jonas-schievink/rubble", features = [
    "log"
] }
rubble-nrf5x = { git = "https://github.com/jonas-schievink/rubble", features = [
    "52840"
] }
log = { version = "0.4.8", default-features = false }
alloc-cortex-m = "0.4.2"

[dependencies.embedded-hal]
version = "0.2.6"
features = ["unproven"]

[patch."https://github.com/jonas-schievink/rubble"]
rubble = { git = "https://github.com/danielzfranklin/rubble" }
