[package]
authors = ["the rp-rs team"]
edition = "2018"
readme = "README.md"
name = "blong"
version = "0.1.0"
resolver = "2"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-time = "0.12.1"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.3.0"
cortex-m-rtic = "1.0.0"

[patch.crates-io]
rp-pico = { git = "https://github.com/rp-rs/rp-hal", rev = "bae3f2c9bc2a5b6e95af55122441ab115f1d4153" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
