[package]
name = "ada-gps"
version = "0.1.0"
edition = "2021"

[features]
"rtt-print-traffic" = ["rtt-target"]
# TODO: How to make feature default for `cargo t`
"host-test" = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
defmt = "0.3.0"
bbqueue = "0.5.1"
embedded-hal = "0.2.6"
nb = "1.0.0"
hex = { version = "0.4.3", default-features = false }
rtt-target = { version = "0.3.1", optional = true }
bitflags = "1.3.2"
time = { version = "0.3.7", default-features = false }

[dev-dependencies]
insta = { version = "1.12.0" }

[dependencies.lexical-core]
version = "0.8.2"
default-features = false
features = ["write-integers", "parse-integers"]

[dependencies.lexical-util]
version = "0.8.1"
default-features = false
features = ["power-of-two"]

[dependencies.lexical-write-integer]
version = "0.8.0"
default-features = false
features = ["power-of-two"]

[dependencies.lexical-parse-integer]
version = "0.8.0"
default-features = false
features = ["power-of-two"]
