[package]
authors = ["daniel@danielzfranklin.org"]
edition = "2021"
name = "app"
publish = false
version = "0.1.0"

[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
board = { path = "../board" }
ada-gps = { path = "../../ada_gps" }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-time = "0.12.1"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.3.0"
cortex-m-rtic = "1.0.0"
nb = "1.0.0"
rp2040-monotonic = "1.0.1"
fugit = "0.3.3"
alloc-cortex-m = "0.4.2"
heapless = "0.7.9"
