[package]
authors = ["daniel@danielzfranklin.org"]
edition = "2021"
name = "app"
publish = false
version = "0.1.0"

[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
board = { path = "../board" }
defmt = "0.3.0"
cortex-m-rtic = "1.0.0"
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
ada-gps = { path = "../../ada_gps" }
