[package]
name = "board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
alloc-cortex-m = "0.4.2"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
embedded-hal = "0.2.6"
rp-pico = "0.3.0"
rp2040-monotonic = "1.0.1"
