[package]
name = "board"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
alloc-cortex-m = "0.4.2"
asm-delay = "0.9.0"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
defmt = "0.3.0"
defmt-rtt-target = "0.3.0"
embedded-hal = { version = "0.2.6", features = ["unproven"] }
embedded-time = "0.12.1"
rp-pico = "0.3.0"
rp2040-hal = { version = "0.4.0", features = ["eh1_0_alpha"] }
rp2040-monotonic = "1.0.1"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nb = "1.0.0"
