[package]
authors = ["daniel@danielzfranklin.org"]
version = "0.1.0"
edition = "2021"
name = "self-tests"
publish = false

[[test]]
name = "ada_gps"
harness = false

[dev-dependencies]
cortex-m = "0.7.4"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
defmt-test = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
